After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779409 - Fix false positive g_warning() in remove_filter()
Fix false positive g_warning() in remove_filter()
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.51.x
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2017-03-01 10:17 UTC by Ole André Vadla Ravnås
Modified: 2017-04-08 05:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdbus: fix false positive g_warning() in remove_filter() (1.61 KB, patch)
2017-03-01 10:19 UTC, Ole André Vadla Ravnås
committed Details | Review

Description Ole André Vadla Ravnås 2017-03-01 10:17:55 UTC
The GDBus thread might be holding a ref while requesting to remove the
filter.
Comment 1 Ole André Vadla Ravnås 2017-03-01 10:19:31 UTC
Created attachment 346961 [details] [review]
gdbus: fix false positive g_warning() in remove_filter()
Comment 2 Philip Withnall 2017-03-01 10:46:29 UTC
Review of attachment 346961 [details] [review]:

Looks good.
Comment 3 Matthias Clasen 2017-04-08 05:13:24 UTC
Attachment 346961 [details] pushed as 005dfea - gdbus: fix false positive g_warning() in remove_filter()