gdbus: fix false positive g_warning() in remove_filter()

The GDBus thread might be holding a ref while requesting to remove the
filter.

https://bugzilla.gnome.org/show_bug.cgi?id=779409